hw2 - fix CustomArrayListTest